--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Taniya Patel
 email: taniyap690@gmail.com
 description: A Mystery nobody should be interested to unravel
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jinayshah7.github.io/" # the base hostname & protocol for your site
+url: "https://taniyap690.github.io/" # the base hostname & protocol for your site
 # youtube_username: jinayshah
 github_username:  taniya690
 paginate: 50
